Fix profile alignment on smaller screens.

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -226,6 +226,7 @@ body {
 		max-width: 600px;
 		margin-left: auto;
 		margin-right: auto;
+		padding-right: (@grid-gutter / 3 * 2);
 		
 		&.fixed {
 			position: static;
