--- a/compiled/styles.css
+++ b/compiled/styles.css
@@ -663,6 +663,7 @@ body:before {
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
+    padding-right: 20px;
   }
   #profile.fixed {
     position: static;
